# ifj20-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  finite_automata_definition.c  finite_automata_definition.h  ifj20-compiler  ifj20-compiler.c  input.txt  lex  lex.c  lex_functions.c  lex_functions.h  lex_structures.h  odevzdani.sh  rozdeleni  run_from_zip.sh  run_test_suite.sh  test_by_type.sh  unzip.sh  zip_and_test.sh
general/: debugging.h  return_codes.h  string_functions.c  string_functions.h  utility_functions.c  utility_functions.h
generator/: generator.c  generator.h
ifj-testsuite/: experiment.ifjcode  testsuite.py
input_files/: example1.txt  example123.txt  example1_no_underline.txt  example2.txt  example3.txt  example_robin.txt  gen_if_for_test.go  gen_test.go  gen_user_func_test.go  generator_test.go  input_1.txt  short_input.txt
parser/: expression_analysis.c  expression_analysis.h  expression_generator.c  expression_generator.h  expression_rules.txt  infix2postfix.c  infix2postfix.h  parser.c  parser.h  semantic_functions.c  semantic_functions.h  semantic_late_check.c  semantic_late_check.h
scanner/: finite_automata.c  finite_automata.h  finite_automata_definition.c  finite_automata_definition.h  lex_functions.c  lex_functions.h  lex_structures.h  list_of_tokens.h  scanner_functions.c  scanner_functions.h  stack.c  stack.h  states_list.h  symtable.c  symtable.h  token_functions.c  token_functions.h  token_linked_list.c  token_linked_list.h  token_structure.c  token_structure.h  token_types.h
